# decor8ai-sdk

./: API_LICENSE_NOTICE  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
comfyUI/: build.sh  pyproject.toml
comfyUI/node/: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  virtual_staging_node.py
comfyUI/node/tests/: test_decor8_node.py
comfyUI/nodes/: __init__.py  virtual_staging_node.py
comfyUI/tests/: __init__.py  test_decor8_node.py
dart/decor8ai/: .gitignore  CHANGELOG.md  LICENSE  README.md  build_publish.sh  pubspec.yaml
dart/decor8ai/example/: example.dart
dart/decor8ai/lib/: decor8ai.dart
dart/decor8ai/test/: decor8ai_test.dart
decor8ai/: client.py  setup.py
http/: README.md
http/api_demo/: decor8ai_api_demo.html
http/api_demo/css/: image-compare-slider.css
http/api_demo/js/: image-compare-slider.js
js/: sdk_test.js
js/decor8ai/: PUBLISHING.md  README.md  constants.js  index.d.ts  index.js  package-lock.json  package.json
python/: sdk_generate_designs_test.py  sdk_image_caption_generator_test.py  sdk_prime_the_room_walls_test.py  sdk_test.py  sdk_test_concurrent.py
python/decor8ai/: README.md  build_publish.sh  pyproject.toml  setup.py
python/decor8ai/decor8ai/: __init__.py  client.py  constants.py
python/samples/: decor8ai-api.ipynb  remove-objects-and-virtual-staging.py
python/tests/: sdk_change_cabinet_color_test.py  sdk_change_wall_color_test.py  sdk_generate_designs_for_room.py  sdk_generate_designs_test.py  sdk_generate_inspirational_designs.py  sdk_landscaping_test.py  sdk_pipeline_test.py  sdk_prime_walls_for_room_test.py  sdk_remodel_bathroom_test.py  sdk_remodel_kitchen_test.py  sdk_remove_objects_test.py  sdk_replace_sky_behind_house_test.py  sdk_sketch_to_3d_test.py  sdk_test_concurrent.py  sdk_upscale_image_test.py  test_client.py
tests/: config.json  run_all_tests.sh  test_all_endpoints.py  test_js_sdk.js
tests/results/: js_test_report.json
web/wix/velo/: decor8ai.web.js  readme.md  virtual-stager.app.js
web/wordpress/decor8ai-virtual-staging/: build.sh  decor8ai-virtual-staging.php  readme.txt  test-logging.php
web/wordpress/decor8ai-virtual-staging/assets/css/: style.css
web/wordpress/decor8ai-virtual-staging/assets/js/: virtual-stager.js
web/wordpress/decor8ai-virtual-staging/includes/: class-admin.php  class-api.php  class-bulk-processor.php  class-cache.php  class-error-handler.php  class-frontend.php  class-security.php  functions.php
web/wordpress/decor8ai-virtual-staging/templates/: virtual-staging.php
web/wordpress/wpgetapi/: README.md
