[project]
name = "decor8ai-comfyui"
description = "Decor8 AI Virtual Staging, Interior Design, Landscaping, Remodeling, and more (Requires API key from www.decor8.ai)"
version = "2.0.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "torch",
    "Pillow",
    "numpy",
]

[project.urls]
Repository = "https://github.com/immex-tech/decor8ai-sdk"
Documentation = "https://api-docs.decor8.ai"
Homepage = "https://www.decor8.ai"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "decor8ai-virtual-staging-interior-design"
DisplayName = "Decor8 AI Virtual Staging"
Description = """
Transform spaces using Decor8 AI's professional API service.

This node requires an API key from https://www.decor8.ai
- Purchase prepaid plans or subscribe to pay-as-you-go
- Get your API key from the Decor8 AI dashboard

Features:
- Virtual Staging for empty rooms
- Interior design generation for furnished rooms
- Design Inspirations (no room photo required)
- Kitchen and Bathroom Remodeling
- Landscaping Design generation
- Wall Color changes
- Kitchen Cabinet Color changes
- Sky Replacement for exteriors
- Sketch to 3D Render conversion
- Object Removal from rooms
- Image Upscaling
- Multiple design styles and room types

Visit www.decor8.ai for pricing and plans.
"""
Icon = "icon.png"
Tags = ["virtual-staging", "interior-design", "real-estate", "landscaping", "remodeling", "ai"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
